# tilelang

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: amd_ci.yml  ci.yml  dist.yml
benchmark/distributed/: README.md  benchmark_ag_gemm.py  benchmark_all_gather.py  benchmark_all_to_all.py  benchmark_gemm_rs.py  benchmark_reduce_scatter.py  utils.py
benchmark/matmul_fp8/: benchmark_matmul.py
cmake/: load_tvm.cmake
cmake/pypi-nvshmem/: FindNVSHMEM.cmake
docs/: spelling_wordlist.txt
docs/design/: distributed-layer-architecture.md
docs/distributed/: building.md  setup.md
docs/get_started/: Installation.md  run_example.md
docs/merge_tilescale/: README.md  culink_nvshmem_tvm_ffi.md
docs/sync_with_tilelang/: BUILD_AND_RUN.md  EXEC_BACKEND_ANALYSIS.md  GITHUB_ISSUE.md  MERGE_ANALYSIS.md  MERGE_RATIONALE.md  README.md
examples/cast/: example_per_token_cast_to_fp8.py
examples/deepseek_mla/: example_mla_decode.py
examples/dequantize_gemm/: utils.py
examples/distributed/: README.md  __init__.py  check_nvshmem.py  example_all_to_all.py  example_allgather.py  example_allgather_gemm.py  example_allgather_gemm_overlapped.py  example_cannon.py  example_gemm_rs_overlapped.py  example_nvshmem.py  example_overlapping_allgather.py  example_post_attn_all2all_transpose.py  example_pre_attn_all2all.py  example_pre_attn_all2all_transpose.py  example_simple_shift.py  example_sp_ag_attention_intra_node.py  example_summa.py  gemm_rs_utils.py  ping_pong.py  reduce_scatter.py  run_tests.sh  simple_allreduce.py  sp_ag_attention_intra_node.py  triton_sp.py
examples/distributed/cuda/: CMakeLists.txt  README.md
examples/distributed/cuda/01_hello_world/: README.md  hello_world.cu  topology_query.cu
examples/distributed/cuda/02_symmetric_heap/: README.md  remote_pointer.cu  symmetric_alloc.cu
examples/distributed/cuda/03_put_get/: README.md  basic_put_get.cu  nonblocking.cu  threadgroup_put.cu
examples/distributed/cuda/04_synchronization/: README.md  barriers.cu
examples/distributed/cuda/05_signals/: README.md  put_signal.cu  signal_wait.cu
examples/distributed/cuda/06_atomics/: README.md  atomics.cu
examples/distributed/cuda/07_collectives/: README.md  reduce.cu
examples/distributed/cuda/08_ring_algorithms/: README.md  ring_allreduce.cu  ring_broadcast.cu
examples/elementwise/: example_elementwise_add_tma_1d.py  test_example_elementwise.py
examples/gemm_fp8/: test_example_gemm_fp8.py
examples/gemm_sp/: example_custom_compress.py  example_gemm_sp.py
examples/warp_specialize/: example_warp_specialize_gemm_copy_gemm_0_1.py
src/op/: builtin.cc  builtin.h  distributed.cc  distributed.h  finalize_reducer.h  operator.h  remote_copy.cc  remote_copy.h  sync.cc  sync.h
src/transform/: loop_vectorize.cc  lower_cpengine_intrin.cc  vectorize_loop.cc
tilelang/: __init__.py  env.py
tilelang/autotuner/: tuner.py
tilelang/cache/: __init__.py  kernel_cache.py
tilelang/contrib/: nvcc.py
tilelang/distributed/: __init__.py  build_nvshmem.sh  context.py  launch.sh  utils.py
tilelang/engine/: lower.py  param.py  phase.py
tilelang/jit/: __init__.py  execution_backend.py  kernel.py
tilelang/language/: __init__.py  allocate.py  builtin.py  copy.py  fill.py  frame.py  gemm.py  parallel.py  persistent.py  pipeline.py  print_op.py  reduce.py  warpgroup.py
tilelang/layout/: fragment.py  layout.py
tilelang/profiler/: __init__.py
tilelang/testing/: __init__.py
tilelang/utils/: allocator.py  (+3 more)
tilescale_ext/: __init__.py
(+112 files in other folders)
